@startuml CurioDB Storage Classes
title CurioDB Storage Class Diagram

skinparam shadowing false
hide empty members

class DiskStorage {
  -databases : DatabaseState[]
  +open()
  +createDatabase(name)
  +createTable(schema)
  +insert(table, row)
  +scan(table)
  +indexScan(table, column, key)
  +updateWhere(table, predicate, value)
  +deleteWhere(table, predicate)
}

class DatabaseState {
  +disk : DiskManager
  +bufferPool : BufferPool
  +catalog : StoredCatalog
}

class DiskManager {
  -pageCount
  +allocatePage() PageId
  +readPage(PageId) PageBytes
  +writePage(PageId, PageBytes)
  +flush()
}

class BufferPool {
  -capacity
  -frames
  +fetchPage(PageId) PageGuard
  +flushPage(PageId)
  +flushAll()
}

class PageGuard {
  -pageId
  -bytes
  +markDirty()
  +release()
}

class TableHeap {
  -pageIds : PageId[]
  +insert(Row) RowId
  +fetch(RowId) Row
  +scan() HeapRow[]
  +update(RowId, Row) RowId
  +deleteRow(RowId)
}

class SlottedPage {
  -bytes : PageBytes
  +insert(record) SlotId
  +read(SlotId) record
  +update(SlotId, record)
  +erase(SlotId)
}

class BPlusTree {
  -rootPageId
  -maxKeys
  +find(int64) RowId
  +insert(int64, RowId)
  +erase(int64)
  +range(lower, upper) RowId[]
}

class Row {
  -values : Value[]
}

class RowId {
  +pageId : PageId
  +slotId : SlotId
}

DiskStorage *-- DatabaseState
DatabaseState *-- DiskManager
DatabaseState *-- BufferPool
BufferPool o-- PageGuard
BufferPool --> DiskManager : reads and flushes
TableHeap --> BufferPool : accesses pages
TableHeap --> SlottedPage : interprets table pages
TableHeap --> Row
TableHeap --> RowId
BPlusTree --> BufferPool : accesses node pages
BPlusTree --> RowId : maps keys to rows

note bottom of SlottedPage
  Fixed size: 4096 bytes
  Slot directory grows forward;
  records grow backward.
end note

@enduml
